--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="choice-container">
-    <a href="videos.html" class="choice-card">Vidéos</a>
+    <a href="vidéos.html" class="choice-card">Vidéos</a>
     <a href="photos.html" class="choice-card">Photos</a>
   </div>
 
