--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
   </header>
 
   <div class="search-bar">
-    <input type="text" placeholder="Rechercher...">
+    <input type="text" id="searchInput" placeholder="Rechercher...">
   </div>
 
-  <div class="choice-container">
-    <a href="vidéos.html" class="choice-card">Vidéos</a>
-    <a href="photos.html" class="choice-card">Photos</a>
+  <div class="choice-container" id="contentContainer">
+    <!-- Vidéos -->
+    <a href="videos.html" class="choice-card" data-title="Vidéo amusante">Vidéos</a>
+    <a href="videos.html" class="choice-card" data-title="Tutoriel Python">Vidéos</a>
+    <!-- Photos -->
+    <a href="photos.html" class="choice-card" data-title="Paysage montagne">Photos</a>
+    <a href="photos.html" class="choice-card" data-title="Photo coucher de soleil">Photos</a>
   </div>
 
   <script src="script.js"></script>
