--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -18,12 +19,9 @@
   </div>
 
   <div class="choice-container" id="contentContainer">
-    <!-- Vidéos -->
-    <a href="videos.html" class="choice-card" data-title="Vidéo amusante">Vidéos</a>
-    <a href="videos.html" class="choice-card" data-title="Tutoriel Python">Vidéos</a>
-    <!-- Photos -->
-    <a href="photos.html" class="choice-card" data-title="Paysage montagne">Photos</a>
-    <a href="photos.html" class="choice-card" data-title="Photo coucher de soleil">Photos</a>
+    <!-- Une seule carte par type -->
+    <a href="videos.html" class="choice-card" data-title="Vidéos">Vidéos</a>
+    <a href="photos.html" class="choice-card" data-title="Photos">Photos</a>
   </div>
 
   <script src="script.js"></script>
