--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -6,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accueil</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Google Font Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,10 +17,11 @@
   </div>
 
   <div class="choice-container" id="contentContainer">
-    <!-- Une seule carte par type -->
-    <a href="videos.html" class="choice-card" data-title="Vidéos">Vidéos</a>
-    <a href="photos.html" class="choice-card" data-title="Photos">Photos</a>
+    <a href="videos.html" class="choice-card" data-title="Vidéo amusante">Vidéos</a>
+    <a href="photos.html" class="choice-card" data-title="Photo coucher de soleil">Photos</a>
   </div>
+
+  <div id="noResult" class="no-result">Aucun résultat</div>
 
   <script src="script.js"></script>
 </body>
