--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="choice-container" id="contentContainer">
-    <a href="videos.html" class="choice-card" data-title="Vidéo amusante">Vidéos</a>
+    <a href="vidéos.html" class="choice-card" data-title="Vidéo amusante">Vidéos</a>
     <a href="photos.html" class="choice-card" data-title="Photo coucher de soleil">Photos</a>
   </div>
 
