--- a/video1.html
+++ b/video1.html
@@ -55,9 +55,10 @@
     width:100%;
     border-radius:15px;
     background:#000;
+    display:block;
   }
 
-  /* Bouton play au centre */
+  /* Bouton play central */
   .play-button {
     position:absolute;
     top:50%; left:50%;
@@ -67,6 +68,7 @@
     cursor:pointer;
     opacity:0.8;
     transition:opacity 0.2s;
+    z-index:2;
   }
   .play-button:hover { opacity:1; }
 
@@ -107,7 +109,7 @@
   }
   button:hover { transform:scale(1.05); }
 
-  /* Titre de la vidéo */
+  /* Titre vidéo */
   .video-title {
     text-align:center;
     font-size:24px;
@@ -128,7 +130,10 @@
 </div>
 
 <div class="video-container">
-  <video id="myVideo" src="https://www.w3schools.com/html/mov_bbb.mp4" poster="https://via.placeholder.com/800x450.png?text=Video+Thumbnail"></video>
+  <video id="myVideo" poster="https://via.placeholder.com/800x450.png?text=Video+Thumbnail">
+    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    Votre navigateur ne supporte pas la vidéo.
+  </video>
   <div class="play-button" id="playBtn">&#9658;</div>
 
   <div class="controls">
@@ -138,7 +143,6 @@
   </div>
 </div>
 
-<!-- Titre de la vidéo -->
 <div class="video-title">Titre de la vidéo ici</div>
 
 <script>
@@ -148,15 +152,10 @@
   const progressBar = document.getElementById("progressBar");
   const fullscreenBtn = document.getElementById("fullscreenBtn");
 
-  // Play au clic sur l'image
+  // Play central
   playBtn.addEventListener("click", () => {
-    if(video.paused) {
-      video.play();
-      playBtn.style.display = "none";
-    } else {
-      video.pause();
-      playBtn.style.display = "block";
-    }
+    video.play();
+    playBtn.style.display = "none";
   });
 
   // Play/Pause bouton
@@ -170,12 +169,10 @@
     }
   });
 
-  // Mettre à jour la barre de progression
+  // Barre de progression
   video.addEventListener("timeupdate", () => {
     progressBar.value = (video.currentTime / video.duration) * 100;
   });
-
-  // Skip vidéo en déplaçant la barre
   progressBar.addEventListener("input", () => {
     video.currentTime = (progressBar.value / 100) * video.duration;
   });
