--- a/video1.html
+++ b/video1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vidéo 1</title>
+<title>Je joue à Action ou Vérité avec mon demi-frère !</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
   body {
@@ -122,7 +122,7 @@
 <body>
 
 <header>
-  <div class="banner">Nom du Site</div>
+  <div class="banner"> Arrachetonchibre </div>
 </header>
 
 <div class="search-bar">
@@ -131,8 +131,7 @@
 
 <div class="video-container">
   <video id="myVideo" poster="https://via.placeholder.com/800x450.png?text=Video+Thumbnail">
-    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-    Votre navigateur ne supporte pas la vidéo.
+    <source src="video1.jpg" type="video/mp4>
   </video>
   <div class="play-button" id="playBtn">&#9658;</div>
 
