--- a/video1.html
+++ b/video1.html
@@ -131,7 +131,7 @@
 
 <div class="video-container">
   <video id="myVideo" poster="https://via.placeholder.com/800x450.png?text=Video+Thumbnail">
-    <source src="https://www.dropbox.com/scl/fi/1w1srj7b5wsswhq0yctvu/video1.mp4?rlkey=417crj3n1epnvj1kpq23vg3eu&st=zxgia478&raw=1" type="video/mp4">
+    <source src=https://dl.dropboxusercontent.com/scl/fi/1w1srj7b5wsswhq0yctvu/video1.mp4?rlkey=417crj3n1epnvj1kpq23vg3eu&st=zxgia478" type="video/mp4">
     Ton navigateur ne supporte pas la lecture de vidéos.
   </video>
   <div class="play-button" id="playBtn">&#9658;</div>
