--- a/video1.html
+++ b/video1.html
@@ -13,7 +13,6 @@
       color:#333;
     }
 
-    /* Bannière */
     header { text-align:center; padding:30px; background:#f0f2f5; }
     .banner {
       display:inline-block;
@@ -22,12 +21,10 @@
       padding:15px 40px;
       font-size:28px;
       font-weight:700;
-      letter-spacing:1px;
       border-radius:50px;
       box-shadow:0 4px 15px rgba(0,0,0,0.2);
     }
 
-    /* Conteneur vidéo */
     .video-container {
       max-width:900px;
       margin:40px auto;
@@ -46,13 +43,13 @@
     /* Boutons flottants */
     .controls-overlay {
       position:absolute;
-      bottom:10%;
+      bottom:60px;
       left:50%;
       transform:translateX(-50%);
       display:flex;
       align-items:center;
       justify-content:center;
-      gap:30px;
+      gap:20px;
       opacity:1;
       transition: opacity 0.4s;
     }
@@ -62,26 +59,14 @@
       pointer-events:none;
     }
 
-    .top-left {
-      position:absolute;
-      top:15px;
-      left:15px;
-    }
-
-    .bottom-right {
-      position:absolute;
-      bottom:15px;
-      right:15px;
-    }
-
     .control-btn {
       background:rgba(0,0,0,0.6);
       border:none;
       border-radius:50%;
-      width:55px;
-      height:55px;
+      width:50px;
+      height:50px;
       color:white;
-      font-size:22px;
+      font-size:20px;
       cursor:pointer;
       display:flex;
       align-items:center;
@@ -93,25 +78,59 @@
       background:rgba(0,0,0,0.8);
     }
 
-    /* Barre de progression */
-    .progress-bar {
+    /* Progress + temps */
+    .progress-container {
       position:absolute;
       bottom:0;
       left:0;
       width:100%;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:5px 10px;
+      background:rgba(0,0,0,0.4);
+    }
+
+    .time-display {
+      color:white;
+      font-size:14px;
+      font-weight:500;
+      min-width:90px;
+      text-align:center;
+    }
+
+    .progress-bar {
+      flex:1;
+      margin:0 10px;
       height:6px;
-      appearance:none;
-      background:rgba(255,255,255,0.4);
-      cursor:pointer;
+      -webkit-appearance:none;
+      background:#ccc;
+      border-radius:3px;
     }
     .progress-bar::-webkit-slider-thumb {
-      appearance:none;
-      width:14px;
-      height:14px;
+      -webkit-appearance:none;
+      width:12px; height:12px;
       background:#4364f7;
       border-radius:50%;
       cursor:pointer;
     }
+
+    /* Bouton retour aux vidéos */
+    .back-btn {
+      position:absolute;
+      bottom:10px;
+      left:50%;
+      transform:translateX(-50%);
+      background:rgba(0,0,0,0.6);
+      color:white;
+      border:none;
+      border-radius:20px;
+      padding:8px 20px;
+      cursor:pointer;
+      font-weight:600;
+      transition:background 0.2s;
+    }
+    .back-btn:hover { background:rgba(0,0,0,0.8); }
 
     .video-title {
       text-align:center;
@@ -120,6 +139,20 @@
       color:#0052d4;
       margin-top:15px;
     }
+
+    .play-button {
+      position:absolute;
+      top:50%;
+      left:50%;
+      transform:translate(-50%, -50%);
+      font-size:60px;
+      color:white;
+      cursor:pointer;
+      opacity:0.8;
+      transition:opacity 0.2s;
+      z-index:2;
+    }
+    .play-button:hover { opacity:1; }
   </style>
 </head>
 <body>
@@ -128,91 +161,103 @@
   <div class="banner"> Arrachetonchibre </div>
 </header>
 
-<div class="video-container" id="videoContainer">
+<div class="video-container">
   <video id="myVideo" poster="https://via.placeholder.com/800x450.png?text=Video+Thumbnail">
-    <source src="https://dl.dropboxusercontent.com/scl/fi/1w1srj7b5wsswhq0yctvu/video1.mp4?rlkey=417crj3n1epnvj1kpq23vg3eu&st=zxgia478" type="video/mp4">
+    <source src="https://dl.dropboxusercontent.com/s/1w1srj7b5wsswhq0yctvu/video1.mp4" type="video/mp4">
     Ton navigateur ne supporte pas la lecture de vidéos.
   </video>
 
-  <!-- Bouton retour -->
-  <button class="control-btn top-left" onclick="window.location.href='videos.html'">⟵</button>
+  <div class="play-button" id="playBtn">&#9658;</div>
 
-  <!-- Contrôles flottants -->
   <div class="controls-overlay" id="controlsOverlay">
-    <button class="control-btn" id="back10">⏪ -10s</button>
-    <button class="control-btn" id="playPause">▶️/⏸️</button>
-    <button class="control-btn" id="forward10">⏩ +10s</button>
+    <button class="control-btn" id="rewindBtn">&#x23EA;</button>
+    <button class="control-btn" id="playPauseBtn">&#9658;</button>
+    <button class="control-btn" id="forwardBtn">&#x23E9;</button>
+    <button class="control-btn" id="fullscreenBtn">&#x26F6;</button>
   </div>
 
-  <!-- Bouton fullscreen -->
-  <button class="control-btn bottom-right" id="fullscreenBtn">⛶</button>
+  <div class="progress-container">
+    <div class="time-display" id="currentTime">0:00</div>
+    <input type="range" id="progressBar" class="progress-bar" value="0" min="0" max="100">
+    <div class="time-display" id="totalTime">0:00</div>
+  </div>
 
-  <!-- Progress bar -->
-  <input type="range" id="progressBar" value="0" min="0" max="100" class="progress-bar">
+  <button class="back-btn" onclick="window.location.href='videos.html'">⟵ Retour aux vidéos</button>
 </div>
 
 <div class="video-title">Titre de la vidéo ici</div>
 
 <script>
   const video = document.getElementById("myVideo");
-  const playPause = document.getElementById("playPause");
-  const back10 = document.getElementById("back10");
-  const forward10 = document.getElementById("forward10");
-  const progressBar = document.getElementById("progressBar");
+  const playBtn = document.getElementById("playBtn");
+  const playPauseBtn = document.getElementById("playPauseBtn");
+  const rewindBtn = document.getElementById("rewindBtn");
+  const forwardBtn = document.getElementById("forwardBtn");
   const fullscreenBtn = document.getElementById("fullscreenBtn");
-  const overlay = document.getElementById("controlsOverlay");
-  const container = document.getElementById("videoContainer");
+  const progressBar = document.getElementById("progressBar");
+  const controlsOverlay = document.getElementById("controlsOverlay");
+  const currentTimeDisplay = document.getElementById("currentTime");
+  const totalTimeDisplay = document.getElementById("totalTime");
 
-  let hideControlsTimeout;
+  function formatTime(seconds) {
+    const min = Math.floor(seconds / 60);
+    const sec = Math.floor(seconds % 60);
+    return `${min}:${sec < 10 ? '0'+sec : sec}`;
+  }
 
-  // Play / Pause
-  playPause.addEventListener("click", () => {
-    if (video.paused) video.play();
-    else video.pause();
+  // Play central
+  playBtn.addEventListener("click", () => {
+    video.play();
+    playBtn.style.display = "none";
   });
 
-  // Back 10s
-  back10.addEventListener("click", () => {
-    video.currentTime -= 10;
+  // Play/Pause overlay
+  playPauseBtn.addEventListener("click", () => {
+    if(video.paused){
+      video.play();
+      playBtn.style.display = "none";
+      playPauseBtn.innerHTML = "&#10074;&#10074;"; // pause icon
+    } else {
+      video.pause();
+      playBtn.style.display = "block";
+      playPauseBtn.innerHTML = "&#9658;"; // play icon
+    }
   });
 
-  // Forward 10s
-  forward10.addEventListener("click", () => {
-    video.currentTime += 10;
+  // Reculer/Avancer 10s
+  rewindBtn.addEventListener("click", () => { video.currentTime -= 10; });
+  forwardBtn.addEventListener("click", () => { video.currentTime += 10; });
+
+  // Fullscreen
+  fullscreenBtn.addEventListener("click", () => {
+    if(video.requestFullscreen) video.requestFullscreen();
+    else if(video.webkitRequestFullscreen) video.webkitRequestFullscreen();
+    else if(video.msRequestFullscreen) video.msRequestFullscreen();
   });
 
   // Progress bar
   video.addEventListener("timeupdate", () => {
     progressBar.value = (video.currentTime / video.duration) * 100;
+    currentTimeDisplay.textContent = formatTime(video.currentTime);
+    totalTimeDisplay.textContent = formatTime(video.duration);
   });
-
   progressBar.addEventListener("input", () => {
     video.currentTime = (progressBar.value / 100) * video.duration;
   });
 
-  // Fullscreen
-  fullscreenBtn.addEventListener("click", () => {
-    if (container.requestFullscreen) container.requestFullscreen();
-    else if (container.webkitRequestFullscreen) container.webkitRequestFullscreen();
-    else if (container.msRequestFullscreen) container.msRequestFullscreen();
+  // Masquer les controls quand la vidéo joue
+  video.addEventListener("play", () => {
+    setTimeout(() => { controlsOverlay.classList.add("hidden"); }, 2000);
+  });
+  video.addEventListener("pause", () => {
+    controlsOverlay.classList.remove("hidden");
+  });
+  video.addEventListener("mousemove", () => {
+    controlsOverlay.classList.remove("hidden");
+    setTimeout(() => { controlsOverlay.classList.add("hidden"); }, 2000);
   });
 
-  // Masquer les contrôles quand inactif
-  function showControls() {
-    overlay.classList.remove("hidden");
-    fullscreenBtn.style.opacity = "1";
-    clearTimeout(hideControlsTimeout);
-    hideControlsTimeout = setTimeout(() => {
-      overlay.classList.add("hidden");
-      fullscreenBtn.style.opacity = "0";
-    }, 3000);
-  }
-
-  container.addEventListener("mousemove", showControls);
-  video.addEventListener("play", showControls);
-  video.addEventListener("pause", showControls);
 </script>
-
 </body>
-    </html>
-    
+  </html>
+  
