--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <div class="banner">Nom du Site</div>
+    <div class="banner">Arrachetonchibre</div>
   </header>
 
   <div class="search-bar">
