--- a/photos.html
+++ b/photos.html
@@ -126,7 +126,7 @@
 <body>
 
 <header>
-  <div class="banner">Nom du Site</div>
+  <div class="banner">Arrachetonchibre</div>
 </header>
 
 <div class="search-bar">
