--- a/vidéos.html
+++ b/vidéos.html
@@ -132,7 +132,7 @@
 <body>
 
 <header>
-  <div class="banner">Nom du Site</div>
+  <div class="banner">Arrachetonchibre</div>
 </header>
 
 <div class="search-bar">
@@ -152,9 +152,9 @@
 </div>
 
 <div class="videos" id="videoContainer">
-  <a href="video1.html" class="video-card" data-title="Vidéo amusante chat">
-    <div class="video-placeholder">ici mets la vidéo</div>
-    <div class="title-placeholder">Vidéo amusante chat</div>
+  <a href="video1.html" class="video-card" data-title="Je joue à Action ou Vérité avec mon demi-frère ">
+    <div class="https://dl.dropboxusercontent.com/s/1w1srj7b5wsswhq0yctvu/video1.mp4">ici mets la vidéo</div>
+    <div class="Je joue à Action ou Vérité avec mon demi-frère ! Il a une grosse bite."></div>
   </a>
   <a href="video2.html" class="video-card" data-title="Tutoriel Python débutant">
     <div class="video-placeholder">ici mets la vidéo</div>
