--- a/video1.html
+++ b/video1.html
@@ -131,7 +131,7 @@
 
 <div class="video-container" id="videoContainer">
   <video id="myVideo" poster="https://via.placeholder.com/800x450.png?text=Video+Thumbnail">
-    <source src="https://dl.dropboxusercontent.com/s/1w1srj7b5wsswhq0yctvu/video1.mp4" type="video/mp4">
+    <source src="https://drive.google.com/file/d/1m70MD5GOhM2I8gbbPw7d4BJNJ3RcR-47/view?usp=drivesdk" type="video/mp4">
     Ton navigateur ne supporte pas la lecture de vidéos.
   </video>
 
