--- a/vidéos.html
+++ b/vidéos.html
@@ -153,7 +153,7 @@
 
 <div class="videos" id="videoContainer">
   <a href="video1.html" class="video-card" data-title="Je joue à Action ou Vérité avec mon demi-frère ">
-    <div class="https://dl.dropboxusercontent.com/s/1w1srj7b5wsswhq0yctvu/video1.mp4">ici mets la vidéo</div>
+    <div class="https://drive.google.com/uc?export=download&id=1m70MD5GOhM2I8gbbPw7d4BJNJ3RcR-47"></div>
     <div class="Je joue à Action ou Vérité avec mon demi-frère ! Il a une grosse bite."></div>
   </a>
   <a href="video2.html" class="video-card" data-title="Tutoriel Python débutant">
