--- a/video1.html
+++ b/video1.html
@@ -131,7 +131,7 @@
 
 <div class="video-container" id="videoContainer">
   <video id="myVideo" poster="https://via.placeholder.com/800x450.png?text=Video+Thumbnail">
-    <source src="https://drive.google.com/uc?export=download&id=1m70MD5GOhM2I8gbbPw7d4BJNJ3RcR-47"
+    <source src="https://v2.cdnde.com/x2/upload_6e98c1a8e17d2b3a4a1840055bed7412/44319/JOPORN_NET_44319_720p.mp4"
     Ton navigateur ne supporte pas la lecture de vidéos.
   </video>
 
