--- a/vidéos.html
+++ b/vidéos.html
@@ -1,133 +1,126 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Liste Vidéos</title>
-<!-- Google Font Poppins -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-<style>
-  body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0; padding: 0;
-    background: #f0f2f5;
-    color: #333;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Liste Vidéos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0; padding: 0;
+      background: #f0f2f5;
+      color: #333;
+    }
 
-  /* Bannière */
-  header { text-align:center; padding:30px; background:#f0f2f5; }
-  .banner {
-    display:inline-block;
-    background: linear-gradient(135deg,#0052d4,#4364f7,#6fb1fc);
-    color:white;
-    padding:15px 40px;
-    font-size:28px;
-    font-weight:700;
-    letter-spacing:1px;
-    border-radius:50px;
-    box-shadow:0 4px 15px rgba(0,0,0,0.2);
-  }
+    /* Bannière */
+    header { text-align:center; padding:30px; background:#f0f2f5; }
+    .banner {
+      display:inline-block;
+      background: linear-gradient(135deg,#0052d4,#4364f7,#6fb1fc);
+      color:white;
+      padding:15px 40px;
+      font-size:28px;
+      font-weight:700;
+      letter-spacing:1px;
+      border-radius:50px;
+      box-shadow:0 4px 15px rgba(0,0,0,0.2);
+    }
 
-  /* Barre de recherche */
-  .search-bar { text-align:center; margin:25px 0; }
-  .search-bar input {
-    width:60%; max-width:500px;
-    padding:12px 15px;
-    font-size:16px;
-    border:1px solid #ccc;
-    border-radius:25px;
-    outline:none;
-    box-shadow:0 2px 5px rgba(0,0,0,0.1);
-    transition: all 0.3s ease;
-  }
-  .search-bar input:focus {
-    border-color:#4364f7;
-    box-shadow:0 4px 10px rgba(0,82,212,0.2);
-  }
+    /* Barre de recherche */
+    .search-bar { text-align:center; margin:25px 0; }
+    .search-bar input {
+      width:60%; max-width:500px;
+      padding:12px 15px;
+      font-size:16px;
+      border:1px solid #ccc;
+      border-radius:25px;
+      outline:none;
+      box-shadow:0 2px 5px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
+    }
+    .search-bar input:focus {
+      border-color:#4364f7;
+      box-shadow:0 4px 10px rgba(0,82,212,0.2);
+    }
 
-  /* Titre section */
-  .section-title {
-    text-align:center;
-    font-size:26px;
-    font-weight:700;
-    color:#0052d4;
-    margin:15px 0 25px 0;
-    letter-spacing:1px;
-    text-transform:uppercase;
-  }
+    /* Titre section */
+    .section-title {
+      text-align:center;
+      font-size:26px;
+      font-weight:700;
+      color:#0052d4;
+      margin:15px 0 25px 0;
+      letter-spacing:1px;
+      text-transform:uppercase;
+    }
 
-  /* Bouton filtre */
-  .filter { width:220px; margin:0 auto 30px auto; position:relative; }
-  .filter button {
-    width:100%; padding:12px;
-    border:none; border-radius:25px;
-    background:#4364f7; color:white;
-    font-weight:600; cursor:pointer;
-    transition: background 0.3s ease, transform 0.2s;
-  }
-  .filter button:hover { background:#0052d4; transform:scale(1.03); }
+    /* Bouton filtre */
+    .filter { width:220px; margin:0 auto 30px auto; position:relative; }
+    .filter button {
+      width:100%; padding:12px;
+      border:none; border-radius:25px;
+      background:#4364f7; color:white;
+      font-weight:600; cursor:pointer;
+      transition: background 0.3s ease, transform 0.2s;
+    }
+    .filter button:hover { background:#0052d4; transform:scale(1.03); }
 
-  .filter-options {
-    display:none;
-    position:absolute; top:110%; left:0; right:0;
-    border-radius:12px; background:white;
-    box-shadow:0 4px 15px rgba(0,0,0,0.15); overflow:hidden;
-  }
-  .filter-options div { padding:12px; cursor:pointer; transition: background 0.3s ease; }
-  .filter-options div:hover { background:#f0f2f5; }
+    .filter-options {
+      display:none;
+      position:absolute; top:110%; left:0; right:0;
+      border-radius:12px; background:white;
+      box-shadow:0 4px 15px rgba(0,0,0,0.15); overflow:hidden;
+    }
+    .filter-options div { padding:12px; cursor:pointer; transition: background 0.3s ease; }
+    .filter-options div:hover { background:#f0f2f5; }
 
-  /* Grille vidéos */
-  .videos {
-    display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap:25px;
-    padding:20px;
-  }
+    /* Grille vidéos */
+    .videos {
+      display:grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap:25px;
+      padding:20px;
+    }
 
-  /* Carte vidéo cliquable */
-  .video-card {
-    display:flex; flex-direction:column;
-    text-decoration:none;
-    color:inherit;
-    background:white;
-    border-radius:15px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.1);
-    overflow:hidden;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  .video-card:hover {
-    transform: translateY(-5px);
-    box-shadow:0 8px 20px rgba(0,0,0,0.2);
-  }
+    /* Carte vidéo cliquable */
+    .video-card {
+      display:flex; flex-direction:column;
+      text-decoration:none;
+      color:inherit;
+      background:white;
+      border-radius:15px;
+      box-shadow:0 4px 12px rgba(0,0,0,0.1);
+      overflow:hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .video-card:hover {
+      transform: translateY(-5px);
+      box-shadow:0 8px 20px rgba(0,0,0,0.2);
+    }
 
-  .video-placeholder {
-    width:100%; height:160px;
-    background: linear-gradient(135deg, #ddd, #eee);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:14px;
-    color:#666;
-    font-style:italic;
-  }
+    .video-thumbnail {
+      width:100%; height:160px;
+      object-fit:cover;
+    }
 
-  .title-placeholder {
-    font-size:18px;
-    font-weight:600;
-    color:#333;
-    padding:15px;
-    text-align:center;
-  }
+    .title-placeholder {
+      font-size:18px;
+      font-weight:600;
+      color:#333;
+      padding:15px;
+      text-align:center;
+    }
 
-  /* Message Aucun résultat */
-  .no-result {
-    text-align:center;
-    font-size:20px;
-    color:#888;
-    display:none;
-    margin-top:30px;
-  }
-</style>
+    /* Message Aucun résultat */
+    .no-result {
+      text-align:center;
+      font-size:20px;
+      color:#888;
+      display:none;
+      margin-top:30px;
+    }
+  </style>
 </head>
 <body>
 
@@ -152,18 +145,25 @@
 </div>
 
 <div class="videos" id="videoContainer">
-  <a href="video1.html" class="video-card" data-title="Je joue à Action ou Vérité avec mon demi-frère ">
-    <div class="https://drive.google.com/uc?export=download&id=1m70MD5GOhM2I8gbbPw7d4BJNJ3RcR-47"></div>
-    <div class="Je joue à Action ou Vérité avec mon demi-frère ! Il a une grosse bite."></div>
+
+  <!-- Vidéo 1 -->
+  <a href="video1.html" class="video-card" data-title="Je joue à Action ou Vérité avec mon demi-frère">
+    <img class="video-thumbnail" src="https://via.placeholder.com/400x225.png?text=Miniature+Vidéo+1" alt="Miniature vidéo">
+    <div class="title-placeholder">Je joue à Action ou Vérité avec mon demi-frère</div>
   </a>
+
+  <!-- Vidéo 2 -->
   <a href="video2.html" class="video-card" data-title="Tutoriel Python débutant">
-    <div class="video-placeholder">ici mets la vidéo</div>
+    <img class="video-thumbnail" src="https://via.placeholder.com/400x225.png?text=Miniature+Vidéo+2" alt="Miniature vidéo">
     <div class="title-placeholder">Tutoriel Python débutant</div>
   </a>
+
+  <!-- Vidéo 3 -->
   <a href="video3.html" class="video-card" data-title="Compilation fails drôles">
-    <div class="video-placeholder">ici mets la vidéo</div>
+    <img class="video-thumbnail" src="https://via.placeholder.com/400x225.png?text=Miniature+Vidéo+3" alt="Miniature vidéo">
     <div class="title-placeholder">Compilation fails drôles</div>
   </a>
+
 </div>
 
 <div class="no-result" id="noResult">Aucun résultat</div>
@@ -199,4 +199,5 @@
 </script>
 
 </body>
-</html>
+  </html>
+      
